# winsock-http

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build_clean.bat  conanfile.py  http_server.cpp
.conan/: gcc-14-x86_64-static-debug  gcc-14-x86_64-static-release  msvc-193-x86_64-static-debug  msvc-193-x86_64-static-release
